--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,38 @@
-# Config file for automatic testing at travis-ci.org
+dist: xenial
 
 language: python
 
 python:
-  - "3.3"
-  - "2.7"
-  - "2.6"
-  - "pypy"
+  - 3.5
+  - 3.6
+  - 3.7
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+cache:
+  pip: true
+  directories:
+    - $HOME/.ccache  # https://github.com/travis-ci/travis-ci/issues/5853
+    - $HOME/.cache/matplotlib
 
-# command to run tests, e.g. python setup.py test
-script: python setup.py test
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install libblas-dev liblapack-dev
+
+# Install packages
+install:
+  - pip install --upgrade pip
+  - pip install --upgrade wheel setuptools
+  - pip install --upgrade matplotlib
+  - pip install --upgrade scipy
+  - pip install --upgrade xlsxwriter
+  - pip install --upgrade pytest
+  - pip install --upgrade pytest-cov
+  - pip install --upgrade pytest-mpl
+  - pip install --upgrade coveralls
+  - python setup.py install
+
+script:
+  - source activate $TRAVIS_PYTHON_VERSION
+  - pytest --cov mettoolbox --doctest-modules --ignore=docsrc --mpl
+
+after_success:
+  - coveralls
