--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mettoolbox/melodist"]
 	path = mettoolbox/melodist
-	url = git@github.com:timcera/melodist.git
+	url = https://github.com/timcera/melodist.git
