test: Tests are all in tests/
The tests in melodist no longer work but were being found by pytest.
Now "detox" and ".travis.yml" explicitly point to the top level tests/
directory.

Added first test to top level tests/ directory.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 
 script:
   - source activate $TRAVIS_PYTHON_VERSION
-  - pytest --cov mettoolbox --doctest-modules --ignore=docsrc --mpl
+  - pytest --cov mettoolbox --doctest-modules --ignore=docsrc --mpl tests/test_*.py
 
 after_success:
   - coveralls
