--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mettoolbox/melodist"]
-	path = mettoolbox/melodist
+	path = src/mettoolbox/melodist
 	url = https://github.com/timcera/melodist.git
