--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,18 +1,21 @@
-include *.txt
-include VERSION
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include LICENSE.txt
-include README.rst
+include *.in
 include *.rst
+include *.toml
+include *.txt
 include *.yaml
+include VERSION
+include detox
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
+recursive-include src *.gz
+recursive-include src *.ipynb
 recursive-include src *.md
 recursive-include src *.py
 recursive-include src *.rst
 recursive-include src *.txt
 recursive-include src *.yaml
 recursive-include src Makefile
+recursive-include tests *.csv
+recursive-include tests *.py
