--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.1.0
     hooks:
       - id: check-added-large-files
       - id: check-case-conflict
@@ -22,7 +22,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/psf/black
-    rev: 21.12b0  # Replace by any tag/version: https://github.com/psf/black/tags
+    rev: 22.1.0  # Replace by any tag/version: https://github.com/psf/black/tags
     hooks:
       - id: black
         language_version: python  # Should be a command that runs python3.6+
@@ -43,32 +43,32 @@ repos:
         args: ["--profile", "black", "--filter-files"]
 
   - repo: https://github.com/dfm/black_nbconvert
-    rev: v0.3.0
+    rev: v0.4.0
     hooks:
       - id: black_nbconvert
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.0
+    rev: v1.12.1
     hooks:
       - id: blacken-docs
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.29.1
+    rev: v2.31.0
     hooks:
       - id: pyupgrade
 
-  - repo: https://github.com/Carreau/velin
-    rev: 0.0.11
-    hooks:
-      - id: velin
-        name: Velin
-        description: This hook attempt to reformat docstrings using numpydoc format.
-        entry: velin
-        language: python
-        language_version: python3
-        types: [text]
-        types_or: [python]
-        args: ["--write","--no-fixers"]
+        #  - repo: https://github.com/Carreau/velin
+        #    rev: 0.0.12
+        #    hooks:
+        #      - id: velin
+        #        name: Velin
+        #        description: This hook attempt to reformat docstrings using numpydoc format.
+        #        entry: velin
+        #        language: python
+        #        language_version: python3
+        #        types: [text]
+        #        types_or: [python]
+        #        args: ["--write","--no-fixers"]
 
   - repo: https://github.com/regebro/pyroma
     rev: "3.2"
@@ -76,7 +76,7 @@ repos:
       - id: pyroma
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.20.3
+    rev: v2.20.4
     hooks:
       - id: commitizen
         stages: [commit-msg]
