--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,13 +33,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-mpl pytest-cov
+        python -m pip install flake8 pytest pytest-cov
         python -m pip install coveralls[toml]
         python -m pip install -e .
 
     - name: Test with pytest
       run: |
-        pytest --mpl --cov
+        python -m pytest --cov
 
     - name: Coveralls
       uses: AndreMiras/coveralls-python-action@develop
