--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
+        python-version: [ '3.7', '3.8', '3.9' ]
 
     steps:
     - uses: actions/checkout@v3
@@ -36,7 +36,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-cov
-        python -m pip install coveralls[toml]
+        python -m pip install coverage[toml]
+        python -m pip install coveralls
         python -m pip install -e .
 
     - name: Test with pytest
