build: misc build, ci, and refactoring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,3 +109,6 @@ version = {file = "VERSION"}
 [tool.setuptools.packages.find]
 where = ["src"]
 exclude = ["examples*", "tools*", "docs*", "mettoolbox.tests*"]
+
+[tool.isort]
+profile = "black"
