--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dynamic = ["readme", "version"]
 description = "mettoolbox is set of command line and Python tools for the analysis and reporting of meteorological data."
 requires-python = ">=3.7.1"
 dependencies = [
-    "toolbox_utils >= 1.0.0, < 2.0.0",
+    "toolbox_utils >= 2.0.0, < 3.0.0",
+    "tstoolbox >= 104.0.0, < 105.0.0",
     "cltoolbox",
     "solarpy",
     "standard-precip",
