--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ readme = {file = "README.rst"}
 version = {file = "VERSION"}
 
 [tool.setuptools.packages.find]
-exclude = ["examples*", "tools*", "docs*", "mettoolbox.tests*"]
+exclude = ["tests*", "examples*", "tools*", "docs*", "mettoolbox.tests*"]
 where = ["src"]
 
 [tool.setuptools_scm]
