--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mettoolbox/melodist"]
 	path = src/mettoolbox/melodist
 	url = https://github.com/timcera/melodist.git
+[submodule "src/mettoolbox/toolbox_utils"]
+	path = src/mettoolbox/toolbox_utils
+	url = git@github.com:timcera/toolbox_utils.git
