--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,16 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
+exclude: |
+    (?x)^(
+        .*\.dods|
+        .*\.dmr|
+        .*\.dmd
+        )$
+
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0
+      rev: v4.6.0
       hooks:
           - id: check-case-conflict
           - id: check-docstring-first
@@ -21,6 +28,30 @@ repos:
           - id: mixed-line-ending
           - id: trailing-whitespace
             exclude: notebooks/tstoolbox_plot_bash.sh
+
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      # Ruff version.
+      rev: v0.4.10
+      hooks:
+          # Run the linter.
+          - id: ruff
+            types_or: [python, pyi, jupyter]
+            args: [--fix]
+          # Run the formatter.
+          - id: ruff-format
+            types_or: [python, pyi, jupyter]
+
+    - repo: https://github.com/pycqa/isort
+      rev: 5.13.2
+      hooks:
+          - id: isort
+            name: isort (python)
+          - id: isort
+            name: isort (cython)
+            types: [cython]
+          - id: isort
+            name: isort (pyi)
+            types: [pyi]
 
     - repo: https://github.com/pappasam/toml-sort
       rev: v0.23.1
@@ -51,45 +82,18 @@ repos:
           - id: beautysh
             args: [--indent-size, '4']
 
-    - repo: https://github.com/psf/black
-      rev: 24.3.0
-      hooks:
-          - id: black
-          - id: black-jupyter
-
-    - repo: https://github.com/pycqa/isort
-      rev: 5.13.2
-      hooks:
-          - id: isort
-            name: isort (python)
-            args: [--profile, black, --filter-files]
-          - id: isort
-            name: isort (cython)
-            types: [cython]
-            args: [--profile, black, --filter-files]
-          - id: isort
-            name: isort (pyi)
-            types: [pyi]
-            args: [--profile, black, --filter-files]
-
     - repo: https://github.com/asottile/blacken-docs
       rev: 1.16.0
       hooks:
           - id: blacken-docs
 
     - repo: https://github.com/asottile/pyupgrade
-      rev: v3.15.2
+      rev: v3.16.0
       hooks:
           - id: pyupgrade
 
     - repo: https://github.com/commitizen-tools/commitizen
-      rev: v3.21.3
+      rev: v3.27.0
       hooks:
           - id: commitizen
             stages: [commit-msg]
-
-    - repo: https://github.com/mwouts/jupytext
-      rev: v1.16.1
-      hooks:
-          - id: jupytext
-            args: [--from, ipynb, --to, auto:percent, --sync]
