build: incorporated solarpy and standard_precip to make mettoolbox available on conda-forge
BREAKING CHANGE: Changed to support conda-forge

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/mettoolbox/toolbox_utils"]
 	path = src/mettoolbox/toolbox_utils
 	url = git@github.com:timcera/toolbox_utils.git
+[submodule "src/mettoolbox/standard_precip"]
+	path = src/mettoolbox/standard_precip
+	url = git@github.com:e-baumer/standard_precip.git
